# TT-Sprint05-Project

./: .gitignore  README.md  __init__.py  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
notebooks/: EDA.ipynb
