[project]
name = "TT-Sprint05-Project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas",
  "plotly-express",
  "streamlit",
  "nbformat",
  "ipykernel"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.3"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
# E/F: basic pyflakes/pycodestyle
# I: import sorting
# D: pydocstyle rules - add if needed for docstring checking of Style, Formatting, Structure
ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
